--- a/Question&Ans.html
+++ b/Question&Ans.html
@@ -38,7 +38,7 @@
     </div>
     <div class="container mt-2">
       <div class="topText">
-        <h2 style="font-size: 40px">SSC Registration 2023 Portal</h2>
+        <h2 style="font-size: 40px">J.S.C Registration 2023 Portal</h2>
       </div>
     </div>
  <!--colops start-->
@@ -56,7 +56,7 @@
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>না</strong> ফরম পূরণে নিজের নাম, পিতা, মাতা এমনকি ঠিকানা ভুল হলেও কোন সমস্যা হবে না। কারণ সকল তথ্য জে.এস.সি রেজিষ্ট্রেশন সার্ভার থেকে আসবে। তারপরেও সঠিক তথ্য দিতে হবে।
+              <strong>হ্যাঁ</strong> ফরম পূরণে শিক্ষার্থীর নাম, জন্ম তারিখ অবশ্যই জন্ম নিবন্ধন অনুসরণ করে প্রদান করতে হবে কখনও ভুল জন্ম তারিখ বা নাম দেওয়া যাবে না। যদি ভুল তথ্য এট্রি করা হয় তাহলে সমস্থ একাডেমিক সার্টিফিকেট বা কাগজপত্রে ভুল তথ্য প্রদর্শিত হবে, যাহা সংশোধন অত্যন্ত জড়িল।
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              রেজিষ্ট্রেশন নং, মোবাইল নং, বিভাগ, অতিরিক্ত বিষয়ের নাম, মোবাইল নং ও ছবি ভুল হলে সমস্যা হবে।
+              এন্ট্রিকৃত সমস্থ তথ্যের মধ্যে কোন একটি তথ্যও ভুল হলে বড় ধরনের সমস্যা হবে।
             </div>
           </div>
         </div>
