--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             font-size: 25px;
           "
         >
-          <!--           প্রিয় শিক্ষার্থী, <br />
-          আগামী ১০/০৭/২০২৩ ইং থেকে ২৫/০৭/২০২৩ ইং তারিখের মধ্যে এস.এস.সি
-          রেজিষ্ট্রেশনের তথ্য সংগ্রহ চলবে। -->
-          রেজিষ্ট্রেশনের মেয়াদ শেষ! বিশেষ প্রয়োজনে ফোন: ০১৮৬৪-৭৬ ৯৩ ৬১ (অফিস
-          টাইম)
+                    প্রিয় শিক্ষার্থী, <br />
+          আগামী ০৬/০৯/২০২৩ ইং থেকে ২০/০৯/২০২৩ ইং তারিখের মধ্যে জে.এস.সি
+          রেজিষ্ট্রেশনের তথ্য সংগ্রহ চলবে।
+<!--           রেজিষ্ট্রেশনের মেয়াদ শেষ! বিশেষ প্রয়োজনে ফোন: ০১৮৬৪-৭৬ ৯৩ ৬১ (অফিস
+          টাইম) -->
         </p>
         <!-- 			<h2 style="color: rgb(215, 253, 1); font-size: 20px;">সরকারি বৃত্তির ডাটা এন্ট্রির মেয়াদ শেষ, ধন্যবাদ</h2> -->
       </div>
@@ -87,7 +87,7 @@
             color: rgb(0, 4, 255);
           "
         >
-          রেজিষ্ট্রেশনের মেয়াদ শেষ! প্রয়োজনে কর্তৃপক্ষের সাথে যোগাযোগ করুন
+          ০৬/০৯/২০২৩ ইং তারিখ থেকে ২০/০৯/২০২৩ ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ আবেদন চলবে। 
 <!--           রেজিষ্ট্রেশনের মেয়াদ আগামী ২৯/০৭/২০২৩ ইং তারিখ পর্যন্ত বৃদ্ধি করা হলো!
         </h2> -->
       </div>
