--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         width="100px"
         height="100px"
       /> -->
-<!--       <span class="close-button" onclick="hidePopup()"
+      <span class="close-button" onclick="hidePopup()"
         >&times;
         <h6>Close</h6></span
-      > -->
+      >
       <img
         src="https://roni769361.github.io/sscreg/image/logo.jpg"
         alt="Example Image"
