--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body onload="showPopup()">
     <div class="popup" id="popup">
-<!--       <img
+      <!--       <img
         src="https://www.freeiconspng.com/uploads/yellow-lock-icon-1.png
       "
         alt=""
@@ -50,10 +50,10 @@
             font-size: 25px;
           "
         >
-                    প্রিয় শিক্ষার্থী, <br />
+          প্রিয় শিক্ষার্থী, <br />
           আগামী ০৬/০৯/২০২৩ ইং থেকে ২০/০৯/২০২৩ ইং তারিখের মধ্যে জে.এস.সি
           রেজিষ্ট্রেশনের তথ্য সংগ্রহ চলবে।
-<!--           রেজিষ্ট্রেশনের মেয়াদ শেষ! বিশেষ প্রয়োজনে ফোন: ০১৮৬৪-৭৬ ৯৩ ৬১ (অফিস
+          <!--           রেজিষ্ট্রেশনের মেয়াদ শেষ! বিশেষ প্রয়োজনে ফোন: ০১৮৬৪-৭৬ ৯৩ ৬১ (অফিস
           টাইম) -->
         </p>
         <!-- 			<h2 style="color: rgb(215, 253, 1); font-size: 20px;">সরকারি বৃত্তির ডাটা এন্ট্রির মেয়াদ শেষ, ধন্যবাদ</h2> -->
@@ -87,8 +87,36 @@
             color: rgb(0, 4, 255);
           "
         >
-          ০৬/০৯/২০২৩ ইং তারিখ থেকে ২০/০৯/২০২৩ ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ আবেদন চলবে। 
-<!--           রেজিষ্ট্রেশনের মেয়াদ আগামী ২৯/০৭/২০২৩ ইং তারিখ পর্যন্ত বৃদ্ধি করা হলো!
+          ০৬/০৯/২০২৩ ইং তারিখ থেকে ২০/০৯/২০২৩ ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ
+          আবেদন চলবে। <br />
+          <div
+            style="
+              font-size: 25px;
+              padding: 10px;
+              background-color: rgba(238, 225, 44, 0.274);
+            "
+          >
+            <span
+              style="
+                border: 2px solid green;
+                padding: 5px;
+                border-radius: 30px;
+                background-color: rgba(255, 0, 0, 0.438);
+                color: rgb(255, 255, 255);
+              "
+              >ছবি তোলার সিডিউল:</span
+            >
+            <br />
+            <br />
+            ৮ম/ক ১৭/০৯/২০২৩ ইং (সকাল ১০ ঘটিকা হতে দুপুর ১ ঘটিকা) <br />
+            ৮ম/খ ১৭/০৯/২০২৩ ইং (বিকাল ২ ঘটিকা হতে বিকাল ৪ ঘটিকা) <br />
+            ৮ম/গ ১৮/০৯/২০২৩ ইং (সকাল ১০ ঘটিকা হতে দুপুর ১ ঘটিকা) <br />
+            ৮ম/ঘ ১৮/০৯/২০২৩ ইং (বিকাল ২ ঘটিকা হতে বিকাল ৪ ঘটিকা) <br />
+            অবশ্যই বিদ্যালয়ের নির্দিষ্ট পোশাক এবং ২০০ টাকা রেজিঃ ফি জমাদানের
+            রশিদ সঙ্গে আনতে হবে।
+          </div>
+        </h2>
+        <!--           রেজিষ্ট্রেশনের মেয়াদ আগামী ২৯/০৭/২০২৩ ইং তারিখ পর্যন্ত বৃদ্ধি করা হলো!
         </h2> -->
       </div>
     </div>
@@ -122,9 +150,18 @@
               color: yellow;
             "
           >
-            <span style="font-weight: 800; color: rgb(0, 26, 255); background-color: rgba(248, 232, 6, 0.507);">শিক্ষার্থীর জন্ম নিবন্ধন এবং পিতা মাতার ভোটার আইডি কার্ডের সাথে মিল রেখে জে.এস.সি রেজিষ্ট্রেশন তথ্য ফরম পূরণ করতে হবে। </span> বিশেষ প্রয়োজনে কর্তৃপক্ষের সাথে
-            আলোচনা করতে হবে। যদি কোন ভুল তথ্য প্রদান করা হয় তাহলে সমস্থ একাডেমিক
-            সার্টিফিকেট সহ বিভিন্ন কাগজে ভুল তথ্য প্রদর্শিত হবে। যার জন্য
+            <span
+              style="
+                font-weight: 800;
+                color: rgb(0, 26, 255);
+                background-color: rgba(248, 232, 6, 0.507);
+              "
+              >শিক্ষার্থীর জন্ম নিবন্ধন এবং পিতা মাতার ভোটার আইডি কার্ডের সাথে
+              মিল রেখে জে.এস.সি রেজিষ্ট্রেশন তথ্য ফরম পূরণ করতে হবে।
+            </span>
+            বিশেষ প্রয়োজনে কর্তৃপক্ষের সাথে আলোচনা করতে হবে। যদি কোন ভুল তথ্য
+            প্রদান করা হয় তাহলে সমস্থ একাডেমিক সার্টিফিকেট সহ বিভিন্ন কাগজে ভুল
+            তথ্য প্রদর্শিত হবে। যার জন্য
             <span style="font-weight: 800"
               >বিদ্যালয় কর্তৃপক্ষ দায়ী থাকবে না</span
             >।
