--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
       </div>
     </div>
     <div class="container">
-      <h1 style="font-weight: 800; text-align: center">Contact</h1>
+      <h1 style="font-weight: 800; text-align: center; color: white">
+        Contact
+      </h1>
       <div class="contact">
         <div class="row">
           <div class="col-md-6">
