--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
           "
         >
           প্রিয় শিক্ষার্থী, <br />
-<!--           আগামী ০৬/০৯/২০২৩ ইং থেকে ২০/০৯/২০২৩ ইং তারিখের মধ্যে জে.এস.সি
-          রেজিষ্ট্রেশনের তথ্য সংগ্রহ চলবে। -->
-                জে.এস.সি রেজিষ্ট্রেশন ২০২৩, মেয়াদ শেষ! বিশেষ প্রয়োজনে ফোন: ০১৮৬৪-৭৬ ৯৩ ৬১ (অফিস
-          টাইম)
+          আগামী ১৭/১১/২০২৩ ইং থেকে ২২/১১/২০২৩ ইং তারিখের মধ্যে ৬ষ্ঠ শ্রেণির 
+          রেজিষ্ট্রেশনের তথ্য সংগ্রহ চলবে।
+                <!-- জে.এস.সি রেজিষ্ট্রেশন ২০২৩, মেয়াদ শেষ! বিশেষ প্রয়োজনে ফোন: ০১৮৬৪-৭৬ ৯৩ ৬১ (অফিস
+          টাইম) -->
         </p>
         <!-- 			<h2 style="color: rgb(215, 253, 1); font-size: 20px;">সরকারি বৃত্তির ডাটা এন্ট্রির মেয়াদ শেষ, ধন্যবাদ</h2> -->
       </div>
@@ -73,7 +73,7 @@
     </div>
     <div class="container mt-2">
       <div class="topText">
-        <h2 style="font-size: 40px">J.S.C Registration 2023 Portal</h2>
+        <h2 style="font-size: 40px">Class Six Registration 2023 Portal</h2>
       </div>
       <div class="Notify zoomInZoomOut">
         <h2
@@ -87,7 +87,7 @@
             color: rgb(0, 4, 255);
           "
         >
-          ০৬/০৯/২০২৩ ইং তারিখ থেকে ২০/০৯/২০২৩ ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ
+          ১৭/১১/২০২৩ ইং তারিখ থেকে ২২/১১/২০২৩ ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ
           আবেদন চলবে। <br />
           <div
             style="
@@ -108,10 +108,10 @@
             >
             <br />
             <br />
-            ৮ম/ক ১৭/০৯/২০২৩ ইং (সকাল ১০ ঘটিকা হতে দুপুর ১ ঘটিকা) <br />
-            ৮ম/খ ১৭/০৯/২০২৩ ইং (বিকাল ২ ঘটিকা হতে বিকাল ৪ ঘটিকা) <br />
-            ৮ম/গ ১৮/০৯/২০২৩ ইং (সকাল ১০ ঘটিকা হতে দুপুর ১ ঘটিকা) <br />
-            ৮ম/ঘ ১৮/০৯/২০২৩ ইং (বিকাল ২ ঘটিকা হতে বিকাল ৪ ঘটিকা) <br />
+            ১৭/১১/২০২৩ ইং শুক্রবার সকাল ৯ টা থেকে দুপুর ১ টা পর্যন্ত – ৬ষ্ঠ, ক এবং খ  <br />
+            ১৮/১১/২০২৩ ইং শনিবার সকাল ৮ টা থেকে সকাল ১০ টা পর্যন্ত – ৬ষ্ঠ, গ <br />
+            ১৯/১১/২০২৩ ইং রবিবার সকাল ৮ টা থেকে সকাল ১০ টা পর্যন্ত – ৬ষ্ঠ, ঘ <br />
+            
             অবশ্যই বিদ্যালয়ের নির্দিষ্ট পোশাক এবং ২০০ টাকা রেজিঃ ফি জমাদানের
             রশিদ সঙ্গে আনতে হবে।
           </div>
@@ -153,11 +153,11 @@
             <span
               style="
                 font-weight: 800;
-                color: rgb(0, 26, 255);
-                background-color: rgba(248, 232, 6, 0.507);
+                color: rgb(255, 4, 4);
+                background-color: rgba(0, 0, 0, 0.507);
               "
               >শিক্ষার্থীর জন্ম নিবন্ধন এবং পিতা মাতার ভোটার আইডি কার্ডের সাথে
-              মিল রেখে জে.এস.সি রেজিষ্ট্রেশন তথ্য ফরম পূরণ করতে হবে।
+              মিল রেখে ৬ষ্ঠ শ্রেণির রেজিষ্ট্রেশন তথ্য ফরম পূরণ করতে হবে।
             </span>
             বিশেষ প্রয়োজনে কর্তৃপক্ষের সাথে আলোচনা করতে হবে। যদি কোন ভুল তথ্য
             প্রদান করা হয় তাহলে সমস্থ একাডেমিক সার্টিফিকেট সহ বিভিন্ন কাগজে ভুল
@@ -227,7 +227,7 @@
     <button id="scroll-to-top-btn">&#8593;</button>
     <footer>
       <div class="footer-content">
-        <p>
+        <p style="color: white">
           &copy; 2019 Chakaria Korak Biddyapith. All rights reserved.
           <br />Design and Development by: Roni Kanti Nath
           <a href="Admin.html">Admin Login</a>
