--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           "
         >
           প্রিয় শিক্ষার্থী, <br />
-          আগামী ১৭/১১/২০২৩ ইং থেকে ২২/১১/২০২৩ ইং তারিখের মধ্যে ৬ষ্ঠ শ্রেণির 
+          আগামী **/**/**** ইং থেকে **/**/**** ইং তারিখের মধ্যে ৮ম শ্রেণির 
           রেজিষ্ট্রেশনের তথ্য সংগ্রহ চলবে।
                 <!-- জে.এস.সি রেজিষ্ট্রেশন ২০২৩, মেয়াদ শেষ! বিশেষ প্রয়োজনে ফোন: ০১৮৬৪-৭৬ ৯৩ ৬১ (অফিস
           টাইম) -->
@@ -73,7 +73,7 @@
     </div>
     <div class="container mt-2">
       <div class="topText">
-        <h2 style="font-size: 40px">Class Six Registration 2023 Portal</h2>
+        <h2 style="font-size: 40px">Class Eight Registration 2024 Portal</h2>
       </div>
       <div class="Notify zoomInZoomOut">
         <h2
@@ -87,7 +87,7 @@
             color: rgb(0, 4, 255);
           "
         >
-          ১৭/১১/২০২৩ ইং তারিখ থেকে ২২/১১/২০২৩ ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ
+          **/**/**** ইং তারিখ থেকে **/**/**** ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ
           আবেদন চলবে। <br />
           <div
             style="
@@ -157,7 +157,7 @@
                 background-color: rgba(0, 0, 0, 0.507);
               "
               >শিক্ষার্থীর জন্ম নিবন্ধন এবং পিতা মাতার ভোটার আইডি কার্ডের সাথে
-              মিল রেখে ৬ষ্ঠ শ্রেণির রেজিষ্ট্রেশন তথ্য ফরম পূরণ করতে হবে।
+              মিল রেখে ৮ম শ্রেণির রেজিষ্ট্রেশন তথ্য ফরম পূরণ করতে হবে।
             </span>
             বিশেষ প্রয়োজনে কর্তৃপক্ষের সাথে আলোচনা করতে হবে। যদি কোন ভুল তথ্য
             প্রদান করা হয় তাহলে সমস্থ একাডেমিক সার্টিফিকেট সহ বিভিন্ন কাগজে ভুল
@@ -181,7 +181,7 @@
             >
             <a
               class="linkbtn btn"
-              href="https://script.google.com/macros/s/AKfycbxyKJdd2kAamdvqqRfpiH3OakvuMAXUi9m-7HTu_pzF02fHxi4tE3zwuSTPLAlsSnC_/exec"
+              href="https://script.google.com/macros/s/AKfycbzJKFf_QzCGA5DoUN-2spGE_pkw9EKd9OQyjHRDwusrLjZzfDY-0p4b8AKcIqtT6Ks4/exec"
               target="_blank"
               >Find Student ID</a
             >
