--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             ১৬/০৬/২০২৪ ইং রবিবার বিকাল ২ টা থেকে বিকাল ৪ টা পর্যন্ত – ৬ষ্ঠ, B2  <br />
             
             অবশ্যই বিদ্যালয়ের নির্দিষ্ট পোশাক এবং ২০০ টাকা রেজিঃ ফি জমাদানের
-            রশিদ সঙ্গে আনতে হবে।
+            রশিদ এবং অনলাইন জন্ম নিবন্ধন সনদের ফটোকপি সঙ্গে আনতে হবে।
           </div>
         </h2>
         <!--           রেজিষ্ট্রেশনের মেয়াদ আগামী ২৯/০৭/২০২৩ ইং তারিখ পর্যন্ত বৃদ্ধি করা হলো!
