--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           "
         >
           প্রিয় শিক্ষার্থী, <br />
-          আগামী **/**/**** ইং থেকে **/**/**** ইং তারিখের মধ্যে ৮ম শ্রেণির 
+          আগামী ০৮/০৬/২০২৪ ইং থেকে ১৫/০৬/২০২৪ ইং তারিখের মধ্যে ৮ম শ্রেণির 
           রেজিষ্ট্রেশনের তথ্য সংগ্রহ চলবে।
                 <!-- জে.এস.সি রেজিষ্ট্রেশন ২০২৩, মেয়াদ শেষ! বিশেষ প্রয়োজনে ফোন: ০১৮৬৪-৭৬ ৯৩ ৬১ (অফিস
           টাইম) -->
@@ -87,7 +87,7 @@
             color: rgb(0, 4, 255);
           "
         >
-          **/**/**** ইং তারিখ থেকে **/**/**** ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ
+          ০৮/০৬/২০২৪ ইং থেকে ১৫/০৬/২০২৪ ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ
           আবেদন চলবে। <br />
           <div
             style="
