--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
             ১৬/০৬/২০২৪ ইং রবিবার বিকাল ২ টা থেকে বিকাল ৪ টা পর্যন্ত – ৮ম, B2  <br />
             
             অবশ্যই বিদ্যালয়ের নির্দিষ্ট পোশাক এবং ২০০ টাকা রেজিঃ ফি জমাদানের
-            রশিদ এবং অনলাইন জন্ম নিবন্ধন সনদের ফটোকপি সঙ্গে আনতে হবে।
+            রশিদ এবং অনলাইন জন্ম নিবন্ধন সনদের ফটোকপি সঙ্গে আনতে হবে। </br>
+            ৮ম শ্রেণি A1 শাখার রোল নং Update করা হয়েছে। <a href="https://script.google.com/macros/s/AKfycbwAukFBX3ELlp52K2nQDgyAtOzLXR9HhsniBhCnM59GObGgfQL6K9sinfx_PyZuZIxM/exec">আপডেটকৃত রোল নং দেখতে এখানে ক্লিক করুন</a>
           </div>
         </h2>
         <!--           রেজিষ্ট্রেশনের মেয়াদ আগামী ২৯/০৭/২০২৩ ইং তারিখ পর্যন্ত বৃদ্ধি করা হলো!
