--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
           "
         >
           প্রিয় শিক্ষার্থী, <br />
-          আগামী ০৮/০৬/২০২৪ ইং থেকে ১৫/০৬/২০২৪ ইং তারিখের মধ্যে ৮ম শ্রেণির 
-          রেজিষ্ট্রেশনের তথ্য সংগ্রহ চলবে।
+<!--           আগামী ০৮/০৬/২০২৪ ইং থেকে ১৫/০৬/২০২৪ ইং তারিখের মধ্যে ৮ম শ্রেণির 
+          রেজিষ্ট্রেশনের তথ্য সংগ্রহ চলবে। -->
+              আগামী ২০/০৬/২০২৪ ইং তারিখ পর্যন্ত ৮ম শ্রেণির 
+          রেজিষ্ট্রেশন সময় বৃদ্ধি করা হলো।
                 <!-- জে.এস.সি রেজিষ্ট্রেশন ২০২৩, মেয়াদ শেষ! বিশেষ প্রয়োজনে ফোন: ০১৮৬৪-৭৬ ৯৩ ৬১ (অফিস
           টাইম) -->
         </p>
@@ -87,8 +89,11 @@
             color: rgb(0, 4, 255);
           "
         >
-          ০৮/০৬/২০২৪ ইং থেকে ১৫/০৬/২০২৪ ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ
-          আবেদন চলবে। <br />
+<!--           ০৮/০৬/২০২৪ ইং থেকে ১৫/০৬/২০২৪ ইং তারিখ পর্যন্ত অনলাইনে রেজিঃ
+          আবেদন চলবে। -->
+           আগামী ২০/০৬/২০২৪ ইং তারিখ পর্যন্ত ৮ম শ্রেণির 
+          রেজিষ্ট্রেশন সময় বৃদ্ধি করা হলো।
+          <br />
           <div
             style="
               font-size: 25px;
@@ -112,7 +117,7 @@
             ১৫/০৬/২০২৪ ইং শনিবার বিকাল ২ টা থেকে বিকাল ৪ টা পর্যন্ত – ৮ম, A2  <br />
            ১৬/০৬/২০২৪ ইং রবিবার সকাল ১০ টা থেকে দুপুর ১ টা পর্যন্ত – ৮ম, B1  <br />
             ১৬/০৬/২০২৪ ইং রবিবার বিকাল ২ টা থেকে বিকাল ৪ টা পর্যন্ত – ৮ম, B2  <br />
-            
+
             অবশ্যই বিদ্যালয়ের নির্দিষ্ট পোশাক এবং ২০০ টাকা রেজিঃ ফি জমাদানের
             রশিদ এবং অনলাইন জন্ম নিবন্ধন সনদের ফটোকপি সঙ্গে আনতে হবে। </br>
             ৮ম শ্রেণি A1 শাখার রোল নং Update করা হয়েছে। <a href="https://script.google.com/macros/s/AKfycbzJKFf_QzCGA5DoUN-2spGE_pkw9EKd9OQyjHRDwusrLjZzfDY-0p4b8AKcIqtT6Ks4/exec">আপডেটকৃত রোল নং দেখতে এখানে ক্লিক করুন</a>
